--- a/client/src/index.css
+++ b/client/src/index.css
@@ -414,3 +414,14 @@ button:disabled {
   border: 2px solid black;
   border-radius: 4px;
 }
+
+.reload {
+  font-family: Lucida Sans Unicode;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  width: 25px;
+}
